<resources>
    <string name="app_name">PilotApplication</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_one">1</string>
    <string name="str_two">2</string>
    <string name="str_three">3</string>
    <string name="str_four">4</string>
    <string name="str_five">5</string>
    <string name="str_six">6</string>
    <string name="str_seven">7</string>
    <string name="str_supervisor_information">SUPERVISOR INFORMATION:</string>
    <string name="str_name">NAME</string>
    <string name="str_badge">BADGE</string>
    <string name="str_water_well">WATER WELL</string>
    <string name="str_rig">RIG</string>
    <string name="str_engine">ENGINE</string>
    <string name="str_watchman">WATCHMAN</string>
    <string name="str_next">NEXT</string>
    <string name="str_check_list_to_be_done">CHECK LIST TO BE DONE:</string>
    <string name="str_check">CHECK</string>
    <string name="str_recharge">RECHARGE</string>
    <string name="str_add">ADD</string>
    <string name="str_change">CHANGE</string>
    <string name="str_clean">CLEAN</string>
    <string name="str_gear_head">Gear Head#</string>
    <string name="str_hp">HP.</string>
    <string name="str_mechanic_name_previous_meter_reading"><![CDATA[Mechanic Name & Previous Meter Reading]]></string>
    <string name="str_desial_tank">Desial Tank</string>
    <string name="str_current_meter_reading">Current Meter Reading</string>
    <string name="str_full">Full</string>
    <string name="str_empty">Empty</string>
    <string name="str_3_4">3/4</string>
    <string name="str_1_2">1/2</string>
    <string name="str_1_4">1/4</string>
    <string name="need_nreplace">NEED\nREPLACE</string>
    <string name="str_good">GOOD</string>
    <string name="str_adjust">ADJUST</string>
    <string name="str_replace">REPLACE</string>
    <string name="str_repair">REPAIR</string>
    <string name="str_retight">RETIGHT</string>
    <string name="str_remark_details">REMARK DETAILS:</string>
    <string name="str_flow_meter_checklist">Flow meter checklist</string>
    <string name="str_serial_number">Serial Number</string>
    <string name="str_working_property">Working Property</string>
    <string name="str_zeroing_and_trouble_shooting">Zeroing and Trouble shooting</string>
    <string name="str_need_replace">Need Replace</string>
    <string name="str_remarks">Remarks</string>
    <string name="str_finish">Finish</string>
    <string name="str_step">STEP:</string>
</resources>
