<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TitleLabelStyle"
        android:text="@string/str_supervisor_information" />

    <View style="@style/TitleLineStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_name" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_badge" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_water_well" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rig" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_engine" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_watchman" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:paddingTop="10dp">
        <Button
            android:id="@+id/step_1_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_next" />
    </LinearLayout>


</LinearLayout>
