<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TitleLabelStyle"
        android:text="@string/str_remark_details" />

    <View style="@style/TitleLineStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_flow_meter_checklist" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_serial_number" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <CheckBox
                    style="@style/PilotCheckBoxStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/str_working_property" />

                <CheckBox
                    style="@style/PilotCheckBoxStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/str_zeroing_and_trouble_shooting" />

                <CheckBox
                    style="@style/PilotCheckBoxStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/str_need_replace" />
            </LinearLayout>

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_remarks" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:paddingTop="10dp">
        <Button
            android:id="@+id/step_7_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_finish" />
    </LinearLayout>
</LinearLayout>
