<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TitleLabelStyle"
        android:text="DESIAL INFORMATION:" />

    <View style="@style/TitleLineStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_gear_head" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_hp" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mechanic_name_previous_meter_reading" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_desial_tank" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    style="@style/PilotRadioBoxStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_full" />

                <RadioButton
                    style="@style/PilotRadioBoxStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/str_empty" />

                <RadioButton
                    style="@style/PilotRadioBoxStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_3_4" />

                <RadioButton
                    style="@style/PilotRadioBoxStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_1_2" />

                <RadioButton
                    style="@style/RadioBoxTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_1_4" />
            </RadioGroup>

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_current_meter_reading" />

            <EditText
                style="@style/FormEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/PilotInputEditText.Hint">

                            <android.support.design.widget.TextInputEditText
                                style="@style/PilotInputEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Gear Head#"
                                android:inputType="text" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/PilotInputEditText.Hint">

                            <android.support.design.widget.TextInputEditText
                                style="@style/PilotInputEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="HP."
                                android:inputType="text" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/PilotInputEditText.Hint">

                            <android.support.design.widget.TextInputEditText
                                style="@style/PilotInputEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Mechanic Name &amp; Previous Meter Reading"
                                android:inputType="text" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/PilotInputEditText.Hint">

                            <android.support.design.widget.TextInputEditText
                                style="@style/PilotInputEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Desial Tank"
                                android:inputType="text" />
                        </android.support.design.widget.TextInputLayout>

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Full" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Empty" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="3/4" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 1/2" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 1/4" />
                        </RadioGroup>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/PilotInputEditText.Hint">

                            <android.support.design.widget.TextInputEditText
                                style="@style/PilotInputEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Current meter Reading"
                                android:inputType="text" />
                        </android.support.design.widget.TextInputLayout>
            -->
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/step_4_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_next" />
    </LinearLayout>
</LinearLayout>
